--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: CI/CD Pipeline
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -18,13 +18,54 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'  # Utilise une version stable compatible
+          python-version: '3.10'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # Assurez-vous que ce fichier est bien présent
+          pip install -r requirements.txt
 
       - name: Run tests
-        run: |
-          pytest  # Remplace par la commande adéquate si tes tests sont différents
+        run: pytest
+        continue-on-error: false  # Stoppe le pipeline si les tests échouent
+
+  build-and-push:
+    runs-on: ubuntu-latest
+    needs: test  # Exécute cette étape uniquement si "test" réussit
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Log in to Private Registry
+        run: echo "${{ secrets.PRIVATE_REGISTRY_PASSWORD }}" | docker login ${{ secrets.PRIVATE_REGISTRY }} -u "${{ secrets.PRIVATE_REGISTRY_USERNAME }}" --password-stdin
+
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest .
+
+      - name: Push Docker image to Docker Hub
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest
+
+      - name: Tag image for private registry
+        run: docker tag ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest ${{ secrets.PRIVATE_REGISTRY }}/flaskapp:latest
+
+      - name: Push image to private registry
+        run: docker push ${{ secrets.PRIVATE_REGISTRY }}/flaskapp:latest
+
+  notify-failure:
+    runs-on: ubuntu-latest
+    if: failure()  # Exécuter seulement si un job échoue
+    steps:
+      - name: Send failure notification
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.gmail.com
+          server_port: 465
+          username: ${{ secrets.MAIL_USERNAME }}
+          password: ${{ secrets.MAIL_PASSWORD }}
+          subject: "Build Failure - FlaskApp"
+          body: "Le pipeline CI/CD a échoué. Veuillez vérifier les logs sur GitHub Actions."
+          to: votremail@example.com
+          from: GitHub Actions
